# The_Video_Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
agent1_playwright/src/langgraph_browser_agent/: __init__.py  agent.py  browser_helpers.py  browser_pool.py  cache.py  config.py  cost_tracker.py  cursor_recorder.py  graph.py  llm.py  logger.py  models.py  navigation_planner.py  nodes.py  pipeline.py  prompts.py  security.py  state.py  video_merger.py
agent2_video_gen/: generate_tutorial.py  main.py
agent2_video_gen/adapters/: __init__.py  base.py  grok_adapter.py
agent2_video_gen/assets/: README.md
agent2_video_gen/config/: settings.py
agent2_video_gen/graph/: __init__.py  workflow.py
agent2_video_gen/nodes/: __init__.py  cursor_overlay.py  utils.py  video_processor.py  video_splitter.py
