[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foxio-video-agent"
version = "1.0.0"
description = "Automated browser workflow capture + AI-powered tutorial video generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "langgraph>=0.2.76",
  "langchain-core>=0.3.0",
  "openai>=1.35.0",
  "playwright>=1.48.0",
  "xai-sdk",
  "httpx>=0.27.0",
  "aiofiles>=24.1.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.5.0",
  "python-dotenv>=1.0.0",
  "loguru>=0.7.2",
]

[project.optional-dependencies]
queue = ["rq>=1.16.0", "redis>=5.0.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[tool.setuptools.package-dir]
"" = "agent1_playwright/src"

[tool.setuptools.packages.find]
where = ["agent1_playwright/src"]
include = ["langgraph_browser_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
